day4/dov-bear.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dov-bear-deploy
  labels:
    name: dov-bear-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      name: dov-bear-po
  template:
    metadata:
      name: dov-bear-po
      labels:
        name: dov-bear-po
        dept: eng
        allow-ingress-traffic: "yes"
    spec:
      containers:
      - name : dov-bear-container
        image: chukmunnlee/dov-bear:v2
        imagePullPolicy: IfNotPresent
        ports:
        - name: dov-port
          containerPort: 3000
        livenessProbe:
          httpGet: 
            path: /healthz
            port: 3000
            scheme: HTTP
---
apiVersion: v1
kind: Service
metadata:
  name: dov-bear-svc
  labels:
    name: dov-bear-svc
spec:
  type: ClusterIP
  selector:
    name: dov-bear-po
  ports:
  - port: 8080
    targetPort: dov-port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dov-bear-ing
  labels:
    name: dov-bear-ing
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: “5“
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: dov-bear-svc
      port:
        number: 8080
  rules:
  - host: dov-bear.146.190.5.180.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: dov-bear-svc
            port:
              number: 8080
